<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FormActivity"
    tools:showIn="@layout/activity_form">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/requester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/email"
                    android:textSize="12sp"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_alignTop="@+id/requester"
                    android:layout_toEndOf="@+id/requester"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:src="@drawable/ic_star_black_24dp"
                    android:text="@string/required"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/editText_firstname"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"
                    android:hint="@string/enter_email"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey_500"
                android:alpha=".3">

            </View>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/mobileTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/mobile"
                    android:textSize="12sp"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_alignTop="@+id/mobileTextView"
                    android:layout_toEndOf="@+id/mobileTextView"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:src="@drawable/ic_star_black_24dp"
                    android:text="@string/required"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mobile_edittext"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/editText_firstname"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"
                    android:hint="@string/enter_mobile_number"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey_500"
                android:alpha=".3">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/location"
                    android:textSize="12sp"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_alignTop="@+id/locationTextView"
                    android:layout_toEndOf="@+id/locationTextView"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:src="@drawable/ic_star_black_24dp"
                    android:text="@string/required"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/getLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/get_location"
                    android:paddingTop="4dp"
                    android:alpha=".8"
                    android:background="@drawable/rectangle3"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/location_edittext"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:visibility="gone"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/editText_firstname"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"
                    android:hint="@string/your_location_is"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey_500"
                android:alpha=".3">

            </View>


            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                android:background="@drawable/rectangle3"
                android:textSize="12sp"
                android:text="@string/submit_details"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
